fix alignment

--- a/style.css
+++ b/style.css
@@ -30,13 +30,11 @@ text-align: center;
     margin-left:100px;
 }
 
-#form label {
-
+#form label, #form  button {
     grid-column: 1 / 2;
   }
 
-  #form input,
-  #form  button, .input {
+  #form input,  .input {
     grid-column: 2 / 3;
   }
   
